bios: Implement an iterator for bios table
Traversing bios_table should be platform-independent, so
implement a c-version bios_table iterator in pldm, also
implement a c++ wrapper.

Signed-off-by: John Wang <wangzqbj@inspur.com>
Change-Id: I2afcaac306603410e711aa4772ba35b5e0b131d5

--- a/libpldm/meson.build
+++ b/libpldm/meson.build
@@ -3,13 +3,15 @@ headers = [
   'pldm_types.h',
   'platform.h',
   'bios.h',
+  'bios_table.h',
   'states.h',
 ]
 
 sources = [
   'base.c',
   'platform.c',
-  'bios.c'
+  'bios.c',
+  'bios_table.c'
 ]
 
 libpldm_headers = ['.', '..']
