--- a/test/meson.build
+++ b/test/meson.build
@@ -20,6 +20,7 @@ tests = [
   'libpldm_platform_test',
   'libpldmresponder_base_test',
   'libpldm_bios_test',
+  'libpldm_bios_table_test',
   'libpldmresponder_bios_test',
   'libpldmresponder_pdr_state_effecter_test',
   'libpldmresponder_bios_table_test',
