meson: enable conditional flags by default
Enable conditional build flags by default, so that CI runs on the
superset code. Specific features can be disabled/enabled as need be via
bitbake recipes.

Signed-off-by: Deepak Kodihalli <dkodihal@in.ibm.com>
Change-Id: I3109908f3734492357f4334044954b0c38198805

--- a/meson_options.txt
+++ b/meson_options.txt
@@ -1,3 +1,3 @@
-option('tests', type: 'feature', description: 'Build tests')
+option('tests', type: 'feature', description: 'Build tests', value: 'enabled')
 option('oe-sdk', type: 'feature', description: 'Enable OE SDK')
-option('oem-ibm', type: 'feature', description: 'Enable IBM OEM PLDM')
+option('oem-ibm', type: 'feature', description: 'Enable IBM OEM PLDM', value: 'enabled')
