libpldm: Add APIs to enable PLDM Requester flow
Implement requester APIs outlined at
https://github.com/openbmc/docs/blob/master/designs/pldm-stack.md#Requester.

Sync (send request msg and wait for response) and async (send request
msg and have caller poll an fd) APIs have been implemented. Example apps
that use both flavor of APIs have been implemented as well.

These APIs depend on openbmc/libmctp. For that reason and given the
OpenBMC agnostic nature of libpldm, these APIs must be conditionally
built via a meson feature (requester-api).

Signed-off-by: Deepak Kodihalli <dkodihal@in.ibm.com>
Change-Id: I666a534d8c876638a29074d62c2ed700f33229a8

--- a/test/meson.build
+++ b/test/meson.build
@@ -35,6 +35,12 @@ if get_option('oem-ibm').enabled()
   ]
 endif
 
+if get_option('requester-api').enabled()
+  tests += [
+    'libpldm_requester_test',
+  ]
+endif
+
 foreach t : tests
   test(t, executable(t.underscorify(), t + '.cpp',
                      implicit_include_directories: false,
