--- a/meson_options.txt
+++ b/meson_options.txt
@@ -1,3 +1,5 @@
 option('tests', type: 'feature', description: 'Build tests', value: 'enabled')
 option('oe-sdk', type: 'feature', description: 'Enable OE SDK')
 option('oem-ibm', type: 'feature', description: 'Enable IBM OEM PLDM', value: 'enabled')
+option('requester-api', type: 'feature', description: 'Enable libpldm requester API', value: 'enabled')
+option('utilities', type: 'feature', description: 'Enable debug utilities', value: 'enabled')
