meson: fix lib names
PLDM libs were being prefixed with a duplicate 'lib'. Fixed this such
that they're named as usual, for eg libpldm.so.

Signed-off-by: Deepak Kodihalli <dkodihal@in.ibm.com>
Change-Id: If6819baa4f7b912d6fd2cfd6f1a50ac9032b968c

--- a/libpldm/meson.build
+++ b/libpldm/meson.build
@@ -29,7 +29,7 @@ install_headers(
   subdir: 'libpldm')
 
 libpldm = library(
-  'libpldm',
+  'pldm',
   sources,
   implicit_include_directories: false,
   include_directories: include_directories(libpldm_headers),
