file i/o: implement lid file handler
This commit implements the responder for readFileByTypeIntoMemory
command and also implements the handler for files of type "LID".
The readFileByTypeIntoMemory command works in similar way as
readFileIntoMemory command and transfers the file content through
DMA operation.

Change-Id: I83e3ee398a4c6a4198a40b8b2188a3c11d0e55c4
Signed-off-by: Sampa Misra <sampmisr@in.ibm.com>

--- a/libpldmresponder/meson.build
+++ b/libpldmresponder/meson.build
@@ -22,7 +22,8 @@ if get_option('oem-ibm').enabled()
     '../oem/ibm/libpldmresponder/file_io.cpp',
     '../oem/ibm/libpldmresponder/file_table.cpp',
     '../oem/ibm/libpldmresponder/file_io_by_type.cpp',
-    '../oem/ibm/libpldmresponder/pel_file_io.cpp'
+    '../oem/ibm/libpldmresponder/pel_file_io.cpp',
+    '../oem/ibm/libpldmresponder/lid_file_io.cpp'
   ]
 endif
 
