--- a/libpldmresponder/meson.build
+++ b/libpldmresponder/meson.build
@@ -13,7 +13,8 @@ sources = [
   'effecters.cpp',
   'utils.cpp',
   'platform.cpp',
-  'fru_parser.cpp'
+  'fru_parser.cpp',
+  'fru.cpp',
 ]
 
 if get_option('oem-ibm').enabled()
