Implement the FRU implementation class
FRU implementation class implements the logic to build the PLDM FRU table
from the inventory D-Bus objects. This class exposes APIs to read the
FRU table, number of FRU records and the checksum of the table. This will
be consumed by the GetFRURecordTableMetadata command and GetFRURecordTable
command specified in the DMTF specification DSP0257.

Signed-off-by: Tom Joseph <tomjoseph@in.ibm.com>
Signed-off-by: Deepak Kodihalli <dkodihal@in.ibm.com>
Change-Id: I3212f59e7e972dc66f57a507ba87b707281ba0b9

--- a/libpldmresponder/meson.build
+++ b/libpldmresponder/meson.build
@@ -13,7 +13,8 @@ sources = [
   'effecters.cpp',
   'platform.cpp',
   '../utils.cpp',
-  'fru_parser.cpp'
+  'fru_parser.cpp',
+  'fru.cpp'
 ]
 
 if get_option('oem-ibm').enabled()
