libpldm: utils: Add crc implementation
Add crc implementation,copied from
http://web.mit.edu/freebsd/head/sys/libkern/crc32.c

Signed-off-by: John Wang <wangzqbj@inspur.com>
Change-Id: I82e3f7e556b10fba2956b294b14e8396e50f49e2

--- a/libpldm/meson.build
+++ b/libpldm/meson.build
@@ -5,6 +5,7 @@ headers = [
   'bios.h',
   'states.h',
   'fru.h',
+  'utils.h'
 ]
 
 sources = [
@@ -12,6 +13,7 @@ sources = [
   'platform.c',
   'bios.c',
   'fru.c',
+  'utils.c'
 ]
 
 libpldm_headers = ['.', '..']
