pldmd: add event loop
Replace the while(1) { recv(mctp_socket); } by an event loop (via
sdeventplus). This will enable the daemon to respond to different
kinds of events (D-Bus, data on MCTP socket, etc).

Add IO on the MCTP demux daemon's socket to the event loop.

Signed-off-by: Deepak Kodihalli <dkodihal@in.ibm.com>
Change-Id: Iae899f495db81c764f75f3d63b2a74be40921f36

--- a/meson.build
+++ b/meson.build
@@ -33,7 +33,8 @@ subdir('tool')
 deps = [
   libpldm,
   libpldmresponder,
-  dependency('sdbusplus')
+  dependency('sdbusplus'),
+  dependency('sdeventplus')
 ]
 
 executable(
