--- a/test/meson.build
+++ b/test/meson.build
@@ -26,7 +26,8 @@ tests = [
   'libpldmresponder_bios_table_test',
   'libpldmresponder_platform_test',
   'libpldm_fru_test',
-  'libpldm_utils_test'
+  'libpldm_utils_test',
+  'libpldmresponder_fru_test'
 ]
 
 if get_option('oem-ibm').enabled()
