FRU Parsing for platform specific config files
This patch adds the parsing for the platform specific config
files need to build the PLDM FRU records.

Change-Id: I600cfb7c6dcf529465b2618a2e040aa1e66c1607
Signed-off-by: Tom Joseph <tomjoseph@in.ibm.com>

--- a/test/meson.build
+++ b/test/meson.build
@@ -29,6 +29,7 @@ tests = [
   'libpldm_fru_test',
   'libpldm_utils_test',
   'pldmd_instanceid_test',
+  'libpldmresponder_fru_test'
 ]
 
 if get_option('oem-ibm').enabled()
