FRU Parsing for platform specific config files
This patch adds the parsing for the platform specific config
files need to build the PLDM FRU records. The BMC FRU info is
populated in the D-Bus inventory namespace and these config JSON's
provide the necessary mapping to translate D-Bus properties into
PLDM record information.

Change-Id: I600cfb7c6dcf529465b2618a2e040aa1e66c1607
Signed-off-by: Tom Joseph <tomjoseph@in.ibm.com>

--- a/libpldmresponder/meson.build
+++ b/libpldmresponder/meson.build
@@ -12,7 +12,8 @@ sources = [
   'pdr.cpp',
   'effecters.cpp',
   'platform.cpp',
-  '../utils.cpp'
+  '../utils.cpp',
+  'fru_parser.cpp'
 ]
 
 if get_option('oem-ibm').enabled()
