--- a/tool/meson.build
+++ b/tool/meson.build
@@ -1,6 +1,8 @@
 sources = [
   'pldm_cmd_helper.cpp',
   'pldm_base_cmd.cpp',
+  'pldm_platform_cmd.cpp',
+  'pldm_bios_cmd.cpp',
   'pldmtool.cpp'
 ]
 
@@ -10,4 +12,5 @@ executable(
   implicit_include_directories: false,
   dependencies: [libpldm, libutils],
   install: true,
-  install_dir: get_option('bindir'))
+  install_dir: get_option('bindir'),
+  )
