pldmtool: Add commands
Implement sending out and processing the response of the following commands : GetPDR, SetStateEffecterStates, SetDateTime

Tested:
 $ pldmtool platform GetPDR
 Encode request successfully
 Request Message:
 08 01 80 02 51 00 00 00 00 00 00 00 00 01 80 00 00 00
 On first recv(),response == request : RC = 0
 Total length: 46
 Response Message:
 08 01 00 02 51 00 02 00 00 00 00 00 00 00 01 1d 00 01 00 00 00 01 0b 00 00 13 00 00 00 01 00 21 00 00 00 00 00 00 00 00 00 01 c4 00 01 06

 $ pldmtool platform SetStateEffecterStates -d 1 1 1
 Encode request successfully
 Request Message:
 08 01 80 02 39 01 00 01 01 01 00 00 00 00 00 00 00 00 00 00 00 00 00 00
 On first recv(),response == request : RC = 0
 Total length: 6
 Response Message:
 08 01 00 02 39 00

 $ pldmtool bios SetDateTime -d 20191010080000
 Encode request successfully
 Request Message:
 08 01 80 03 0d 00 00 08 10 10 19 20
 On first recv(),response == request : RC = 0
 Total length: 6
 Response Message:
 08 01 00 00 00 00

Signed-off-by: George Liu <liuxiwei@inspur.com>
Change-Id: Ie13c7b05937ee3f150802d33c6e3434360c0b606

--- a/meson.build
+++ b/meson.build
@@ -30,7 +30,6 @@ configure_file(output: 'config.h',
 
 subdir('libpldm')
 subdir('libpldmresponder')
-subdir('tool')
 
 deps = [
   libpldm,
@@ -49,6 +48,17 @@ executable(
   dependencies: deps,
   install: true,
   install_dir: get_option('bindir'))
+
+libutils_inc = include_directories('.')
+libutility = static_library(
+    'pldmutility',
+    'utility.cpp',
+    dependencies: [
+        libpldm,
+    ],
+)
+
+subdir('tool')
 
 if get_option('tests').enabled()
   subdir('test')
