--- a/tool/meson.build
+++ b/tool/meson.build
@@ -1,6 +1,8 @@
 sources = [
   'pldm_cmd_helper.cpp',
   'pldm_base_cmd.cpp',
+  'pldm_platform_cmd.cpp',
+  'pldm_bios_cmd.cpp',
   'pldmtool.cpp'
 ]
 
@@ -8,6 +10,7 @@ executable(
   'pldmtool',
   sources,
   implicit_include_directories: false,
-  dependencies: libpldm,
+  dependencies: [libpldm, libutility],
   install: true,
-  install_dir: get_option('bindir'))
+  install_dir: get_option('bindir'),
+  )
