Add only cc response
Signed-off-by: John Wang <wangzqbj@inspur.com>
Change-Id: Iec5299f4c4043491aa62e0b94de7f9c12d0bee2e

--- a/meson.build
+++ b/meson.build
@@ -46,6 +46,7 @@ executable(
   'pldmd.cpp',
   'dbus_impl_requester.cpp',
   'instance_id.cpp',
+  'handler.cpp',
   implicit_include_directories: false,
   dependencies: deps,
   install: true,
