--- a/tool/meson.build
+++ b/tool/meson.build
@@ -1,13 +1,14 @@
 sources = [
   'pldm_cmd_helper.cpp',
   'pldm_base_cmd.cpp',
+  'pldm_fru_cmd.cpp',
   'pldmtool.cpp'
 ]
-
 executable(
   'pldmtool',
   sources,
   implicit_include_directories: false,
   dependencies: libpldm,
   install: true,
+		
   install_dir: get_option('bindir'))
