Adding support for GetFruRecordTableMetadata FRU command type in pldmtool.
./pldmtool -h
PLDM requester tool for OpenBMC
Usage: ./pldmtool [OPTIONS] SUBCOMMAND

Options:
  -h,--help                   Print this help message and exit

Subcommands:
  raw                         send a raw request and print response
  base                        base type command
  fru                         fru type command
root@wspooncap07a-Y110UF8B9009:/tmp# ./pldmtool fru -h
fru type command
Usage: ./pldmtool fru [OPTIONS] SUBCOMMAND

Options:
  -h,--help                   Print this help message and exit

Subcommands:
  GetFruRecordTableMetadata   get fru record table metadata

./pldmtool fru -h
fru type command
Usage: ./pldmtool fru [OPTIONS] SUBCOMMAND

Options:
  -h,--help                   Print this help message and exit

Subcommands:
  GetFruRecordTableMetadata   get fru record table metadata

./pldmtool fru GetFruRecordTableMetadata
Encode request successfully
Request Message:
08 01 80 04 01
Success in creating the socket : RC = 3
Success in connecting to socket : RC = 0
Success in sending message type as pldm to mctp : RC = 0
Write to socket successful : RC = 5
Total length:5
Loopback response message:
08 01 80 04 01
On first recv(),response == request : RC = 0
Total length: 24
Shutdown Socket successful :  RC = 0
Response Message:
08 01 00 04 01 00 01 00 ff ff ff ff 3c 00 00 00 01 00 01 00 a7 c3 c7 98
Parsed Response Msg :
FRUDATAMajorVersion : 1
FRUDATAMinorVersion : 0
FRUTableMaximumSize : 4294967295
FRUTableLength : 60
Total number of Record Set Identifiers in table : 1
Total number of records in table :  1
FRU DATAStructureTableIntegrityChecksum :  2563228583

Signed-off-by: Sridevi Ramesh <sridevra@in.ibm.com>
Change-Id: I4396ff72418730bb8c0920f5f20688a28544b4cc

--- a/tool/meson.build
+++ b/tool/meson.build
@@ -3,13 +3,14 @@ sources = [
   'pldm_base_cmd.cpp',
   'pldm_platform_cmd.cpp',
   'pldm_bios_cmd.cpp',
+  'pldm_fru_cmd.cpp',
   'pldmtool.cpp'
 ]
-
 executable(
   'pldmtool',
   sources,
   implicit_include_directories: false,
   dependencies: [libpldm, libpldmutils],
   install: true,
+
   install_dir: get_option('bindir'))
