--- a/tool/meson.build
+++ b/tool/meson.build
@@ -9,6 +9,6 @@ executable(
   'pldmtool',
   sources,
   implicit_include_directories: false,
-  dependencies: libpldm,
+  dependencies: [libpldm, libutils],
   install: true,
   install_dir: get_option('bindir'))
