pldm: Moving utils function into the common directory
Moving libpldmresponder/utils function into the common root directory.
build and make that as a library for ues.

Signed-off-by: George Liu <liuxiwei@inspur.com>
Change-Id: I4fbd0da4bc6f27e9a9ed711962bd8737d8b55ebf

--- a/tool/meson.build
+++ b/tool/meson.build
@@ -8,6 +8,6 @@ executable(
   'pldmtool',
   sources,
   implicit_include_directories: false,
-  dependencies: libpldm,
+  dependencies: [libpldm, libutility],
   install: true,
   install_dir: get_option('bindir'))
