pldm: Moving utils function into the common directory
Moving libpldmresponder/utils function into the common root directory.
build and make that as a library for ues.

Signed-off-by: George Liu <liuxiwei@inspur.com>
Change-Id: I4fbd0da4bc6f27e9a9ed711962bd8737d8b55ebf

--- a/test/meson.build
+++ b/test/meson.build
@@ -30,6 +30,7 @@ tests = [
   'libpldm_utils_test',
   'pldmd_instanceid_test',
   'pldmd_registration_test',
+  'pldm_utils_test',
 ]
 
 if get_option('oem-ibm').enabled()
@@ -47,11 +48,13 @@ foreach t : tests
                      dependencies: [
                          libpldm,
                          libpldmresponder,
+                         libutils,
                          gtest,
                          gmock,
                          pldmd,
                          dependency('phosphor-dbus-interfaces'),
                          dependency('phosphor-logging'),
-                         dependency('sdbusplus')]),
+                         dependency('sdbusplus')]
+                         ),
        workdir: meson.current_source_dir())
 endforeach
