--- a/libpldmresponder/meson.build
+++ b/libpldmresponder/meson.build
@@ -1,7 +1,8 @@
 deps = [
   dependency('phosphor-dbus-interfaces'),
   dependency('sdbusplus'),
-  libpldm
+  libpldm,
+  libpldmutils
 ]
 
 sources = [
@@ -11,7 +12,6 @@ sources = [
   'bios_parser.cpp',
   'pdr.cpp',
   'effecters.cpp',
-  'utils.cpp',
   'platform.cpp',
 ]
 
