pldm: Moving utils function into the common directory
Moving libpldmresponder/utils function into the common root directory.
build and make that as a library for ues.

Signed-off-by: George Liu <liuxiwei@inspur.com>
Change-Id: I4fbd0da4bc6f27e9a9ed711962bd8737d8b55ebf

--- a/libpldmresponder/meson.build
+++ b/libpldmresponder/meson.build
@@ -1,8 +1,7 @@
 deps = [
-  dependency('phosphor-dbus-interfaces'),
   dependency('phosphor-logging'),
-  dependency('sdbusplus'),
-  libpldm
+  libpldm,
+  libutils
 ]
 
 sources = [
@@ -12,7 +11,6 @@ sources = [
   'bios_parser.cpp',
   'pdr.cpp',
   'effecters.cpp',
-  'utils.cpp',
   'platform.cpp',
 ]
 
