--- a/meson.build
+++ b/meson.build
@@ -29,8 +29,23 @@ configure_file(output: 'config.h',
 )
 
 subdir('libpldm')
+libutils_headers = ['libpldmresponder', 'tool']
+libutils = library(
+  'utils',
+  'utils.cpp',
+  dependencies: [
+      libpldm,
+      dependency('phosphor-dbus-interfaces'),
+      dependency('phosphor-logging'),
+      dependency('sdbusplus'),
+  ],
+  include_directories: include_directories(libutils_headers),
+)
+
+libutils = declare_dependency(
+  link_with: libutils)
+
 subdir('libpldmresponder')
-subdir('tool')
 
 deps = [
   libpldm,
@@ -49,6 +64,8 @@ executable(
   dependencies: deps,
   install: true,
   install_dir: get_option('bindir'))
+
+subdir('tool')
 
 if get_option('tests').enabled()
   subdir('test')
