pldm: Add parsing JSON for Numeric Effecter PDR
According to spec DSP0248_1.2.0: 28.11 and effecter_pdr.json, parse JSON and generate PDR
structure.

In addition, move the parsing pldm_numeric_effecter_pdr method to pdr_numeric_effecter_pdr.hpp.

Signed-off-by: George Liu <liuxiwei@inspur.com>
Change-Id: I4254a14f0fd5e33b312f65c15c9a23437e28d341

--- a/test/meson.build
+++ b/test/meson.build
@@ -20,6 +20,7 @@ tests = [
   'libpldmresponder_base_test',
   'libpldmresponder_bios_test',
   'libpldmresponder_pdr_state_effecter_test',
+  'libpldmresponder_pdr_numeric_effecter_test',
   'libpldmresponder_bios_table_test',
   'libpldmresponder_platform_test',
   'pldmd_instanceid_test',
