pldm: Add gmock test for the setNumericEffecterValue method
Add the setNumericEffecterValueHandler test method to the
test/libpldmresponder_platform_numeric_effecter_test.cpp.

In addition, move the setStateEffecterStatesHandler test method to the
test/libpldmresponder_platform_state_effecter_test.cpp.

Signed-off-by: George Liu <liuxiwei@inspur.com>
Change-Id: Iccc7e672ddd5044eb23f5e61202a5a51a1ef17f3

--- a/test/meson.build
+++ b/test/meson.build
@@ -27,6 +27,7 @@ tests = [
   'libpldmresponder_pdr_numeric_effecter_test',
   'libpldmresponder_bios_table_test',
   'libpldmresponder_platform_test',
+  'libpldmresponder_platform_numeric_effecter_test',
   'libpldmresponder_platform_state_effecter_test',
   'libpldm_fru_test',
   'libpldm_utils_test',
