pldm: Add gmock test for the setNumericEffecterValue method
Add the setNumericEffecterValueHandler test method to the
test/libpldmresponder_platform9_test.cpp.

In addition, move the setStateEffecterStatesHandler test method to the
test/libpldmresponder_platform11_test.cpp.

Signed-off-by: George Liu <liuxiwei@inspur.com>
Change-Id: Iccc7e672ddd5044eb23f5e61202a5a51a1ef17f3

--- a/test/meson.build
+++ b/test/meson.build
@@ -26,6 +26,8 @@ tests = [
   'libpldmresponder_pdr_state_effecter_test',
   'libpldmresponder_bios_table_test',
   'libpldmresponder_platform_test',
+  'libpldmresponder_platform9_test',
+  'libpldmresponder_platform11_test',
   'libpldm_fru_test',
   'libpldm_utils_test',
   'pldmd_instanceid_test',
