pldm: change utils.cpp to a shared library
libpldmtool is another process and depends on utils.cpp, so we need to
change utils.cpp to a shared library for pldmtool use.

Signed-off-by: George Liu <liuxiwei@inspur.com>
Change-Id: I25086d543746a220ff257b0b53101f4e61e28b95

--- a/meson.build
+++ b/meson.build
@@ -29,8 +29,23 @@ configure_file(output: 'config.h',
 )
 
 subdir('libpldm')
+libpldmutils_headers = ['libpldmresponder', 'test', 'tool']
+libpldmutils = library(
+  'pldmutils',
+  'utils.cpp',
+  version: meson.project_version(),
+  dependencies: [
+      libpldm,
+      dependency('phosphor-logging'),
+      dependency('sdbusplus'),
+  ],
+  install: true,
+  include_directories: include_directories(libpldmutils_headers),
+)
+
+libpldmutils = declare_dependency(
+  link_with: libpldmutils)
 subdir('libpldmresponder')
-subdir('tool')
 
 deps = [
   libpldm,
@@ -49,6 +64,8 @@ executable(
   dependencies: deps,
   install: true,
   install_dir: get_option('bindir'))
+
+subdir('tool')
 
 if get_option('tests').enabled()
   subdir('test')
