--- a/test/meson.build
+++ b/test/meson.build
@@ -31,7 +31,8 @@ tests = [
   'pldmd_instanceid_test',
   'pldmd_registration_test',
   'pldm_utils_test',
-  'libpldmresponder_fru_test'
+  'libpldmresponder_fru_test',
+  'libpldm_pdr_test'
 ]
 
 if get_option('oem-ibm').enabled()
