Move bios related files to subdirectories
The bios/bios_parser code is hard to read now,
we should split it into several files to improve readability.
A bios subdirectory is created to avoid messing up the libpldmresponder,
then we move the bios related files to this directory.

Signed-off-by: John Wang <wangzqbj@inspur.com>
Change-Id: Ie78ce65944940b4e4ac04751227d903ea104641c

--- a/libpldmresponder/meson.build
+++ b/libpldmresponder/meson.build
@@ -7,9 +7,9 @@ deps = [
 
 sources = [
   'base.cpp',
-  'bios.cpp',
-  'bios_table.cpp',
-  'bios_parser.cpp',
+  './bios/bios.cpp',
+  './bios/table.cpp',
+  './bios/parser.cpp',
   'pdr.cpp',
   'effecters.cpp',
   'platform.cpp',
