pldm: Optimized parsing of PDR JSON files
Move the pldm_state_effecter_pdr method of parse JSON to
pdr_state_effecter.hpp.
Move the pldm_state_effecter_pdr test method to
libpldmresponder_platform_state_effecter_test.cpp.
Removed the nextID method and add the effecter_id attribute in the
state_effecter_pdr.json.

Tested with JSON files:
https://gist.github.com/lxwinspur/2c3fd68cdb35e06480c4a5f7890e3a06#file-state_effecter_pdr-json.

Signed-off-by: George Liu <liuxiwei@inspur.com>
Change-Id: I8428ed042fb0a90ecc448073f059f66360066306
Signed-off-by: George Liu <liuxiwei@inspur.com>

--- a/test/meson.build
+++ b/test/meson.build
@@ -25,11 +25,12 @@ tests = [
   'pldmd_instanceid_test',
   'pldmd_registration_test',
   'pldm_utils_test',
-  'libpldmresponder_fru_test',
+  'libpldmresponder_fru_test'
 ]
 
 if get_option('oem-ibm').enabled()
   tests += [
+    '../oem/ibm/test/libpldm_fileio_test',
     '../oem/ibm/test/libpldmresponder_fileio_test'
   ]
 endif
