bios: Implement BIOSAttribute
bios tables are built based on json entry. when a bios attribute
is set by pldm, the corresponding dbus backend should be synchronized.

then, the BIOSAttribute class is abstracted, and it provides the following two
interfaces

1. constructEntry Construct the entry of the attribute/attribute-value table
2. setAttrValueOnDbus Update the corresponding dbus backend

Specific types of attributes are implemented based on BIOSAttribute. eg
BIOSStringAttribute, BIOSEnumAttribute, BIOSIntegerAttribute.

Once the BIOS Handler is loaded, all attributes would be constructed from json.
We use BIOSConfig(class) to persist all attributes in ram.

BIOSConfig provides the following methods.

- buildTables   build tables
- removeTables  remove the persistent tables
- setAttrValue  set attribute value on dbus and update the bios table
- getBIOSTable  get bios table by table type

After we implemented BIOSConfig/BIOSSIntegerAttribute/BIOSStringAttribute/BIOSEnumAttribute,
we will use the new interface(BIOSConfig) in BIOS Handler.

it will have the following advantages

1. Different types of attribute implementations are placed in different files, improving readability
2. Logic to operate bios tables is no longer coupled with BIOS Handler.

Signed-off-by: John Wang <wangzqbj@inspur.com>
Change-Id: I11e304c470360ca5fde23e4969494bb03de475c0

--- a/libpldmresponder/meson.build
+++ b/libpldmresponder/meson.build
@@ -9,6 +9,7 @@ sources = [
   'base.cpp',
   './bios/bios.cpp',
   './bios/table.cpp',
+  './bios/attribute.cpp',
   './bios/parser.cpp',
   'pdr.cpp',
   'effecters.cpp',
