--- a/libpldmresponder/meson.build
+++ b/libpldmresponder/meson.build
@@ -9,6 +9,7 @@ sources = [
   'base.cpp',
   './bios/bios.cpp',
   './bios/bios_table.cpp',
+  './bios/bios_attribute.cpp',
   './bios/bios_parser.cpp',
   'pdr.cpp',
   'effecters.cpp',
