bios: Implement BIOSStringAttribute
Implement BIOSStringAttribute, most of the code is copied from
bios/bios_parser.cpp.

Implement SetAttrValueOnDbus and constructEntry for string attribute

Signed-off-by: John Wang <wangzqbj@inspur.com>
Change-Id: Ic7c6b35d32738d698d7649f97cb7843606b8a2ba

--- a/libpldmresponder/meson.build
+++ b/libpldmresponder/meson.build
@@ -10,6 +10,7 @@ sources = [
   './bios/bios.cpp',
   './bios/table.cpp',
   './bios/attribute.cpp',
+  './bios/string_attribute.cpp',
   './bios/parser.cpp',
   'pdr.cpp',
   'effecters.cpp',
