--- a/libpldmresponder/meson.build
+++ b/libpldmresponder/meson.build
@@ -11,6 +11,7 @@ sources = [
   './bios/bios_table.cpp',
   './bios/bios_attribute.cpp',
   './bios/bios_string_attribute.cpp',
+  './bios/bios_config.cpp',
   './bios/bios_parser.cpp',
   'pdr.cpp',
   'effecters.cpp',
