bios: Implement BIOSIntegerAttribute
Implement BIOSIntegerAttribute, most of the code is copied from
bios/bios_parser.cpp.

Implement SetAttrValueOnDbus and constructEntry for integer attribute

Signed-off-by: John Wang <wangzqbj@inspur.com>
Change-Id: I57d5b5dbcb74f9a404f5133426208f4c6851dea2

--- a/test/meson.build
+++ b/test/meson.build
@@ -22,6 +22,7 @@ tests = [
   'libpldmresponder_bios_attribute_test',
   'libpldmresponder_bios_string_attribute_test',
   'libpldmresponder_bios_config_test',
+  'libpldmresponder_bios_integer_attribute_test',
   'libpldmresponder_pdr_state_effecter_test',
   'libpldmresponder_bios_table_test',
   'libpldmresponder_platform_test',
