bios: Implement BIOSIntegerAttribute
Implement BIOSIntegerAttribute, most of the code is copied from
bios/bios_parser.cpp.

Implement SetAttrValueOnDbus and constructEntry for integer attribute

Signed-off-by: John Wang <wangzqbj@inspur.com>
Change-Id: I57d5b5dbcb74f9a404f5133426208f4c6851dea2

--- a/libpldmresponder/meson.build
+++ b/libpldmresponder/meson.build
@@ -11,6 +11,7 @@ sources = [
   './bios/table.cpp',
   './bios/attribute.cpp',
   './bios/string_attribute.cpp',
+  './bios/integer_attribute.cpp',
   './bios/config.cpp',
   './bios/parser.cpp',
   'pdr.cpp',
