bios: Implement BIOSEnumAttribute
Implement BIOSEnumAttribute, most of the code is copied from
bios/bios_parser.cpp.

Implement SetAttrValueOnDbus and constructEntry for enum attribute

Signed-off-by: John Wang <wangzqbj@inspur.com>
Change-Id: Ia6230485fd2d6d05f9f2ddb3a80b81f6556aee9f

--- a/libpldmresponder/meson.build
+++ b/libpldmresponder/meson.build
@@ -12,6 +12,7 @@ sources = [
   './bios/attribute.cpp',
   './bios/string_attribute.cpp',
   './bios/integer_attribute.cpp',
+  './bios/enum_attribute.cpp',
   './bios/config.cpp',
   './bios/parser.cpp',
   'pdr.cpp',
